// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Output File Strategy should --kindsWithOwnFile [Class, Interface]' 1`] = `
[
  "modules.md",
  "README.md",
  "module-1/module-1.md",
  "module-1/namespaces/someNameSpace/namespace.someNameSpace.md",
  "module-1/namespaces/someNameSpace/namespaces/nestedNamespace/namespace.nestedNamespace.md",
  "module-1/namespaces/someNameSpace/classes/class.NameSpaceClassA.md",
  "module-1/namespaces/someNameSpace/interfaces/interface.NamespaceInterface.md",
  "module-1/classes/class.Module1ClassA.md",
  "module-1/classes/class.Module1ClassB.md",
  "module-1/interfaces/interface.Module1InterfaceA.md",
  "module-1/interfaces/interface.Module1InterfaceB.md",
  "module-2/module-2.md",
  "module-2/classes/class.Module2ClassA.md",
  "module-2/classes/class.Module2ClassB.md",
  "module-2/interfaces/interface.Module2InterfaceA.md",
  "module-2/interfaces/interface.Module2InterfaceB.md",
]
`;

exports[`Output File Strategy should --kindsWithOwnFile [class]' 1`] = `
[
  "modules.md",
  "README.md",
  "module-1/module-1.md",
  "module-1/namespaces/someNameSpace/namespace.someNameSpace.md",
  "module-1/namespaces/someNameSpace/namespaces/nestedNamespace/namespace.nestedNamespace.md",
  "module-1/namespaces/someNameSpace/classes/class.NameSpaceClassA.md",
  "module-1/classes/class.Module1ClassA.md",
  "module-1/classes/class.Module1ClassB.md",
  "module-2/module-2.md",
  "module-2/classes/class.Module2ClassA.md",
  "module-2/classes/class.Module2ClassB.md",
]
`;

exports[`Output File Strategy should set --kindsWithOwnFile none' 1`] = `
[
  "modules.md",
  "README.md",
  "module-1/module-1.md",
  "module-1/namespaces/someNameSpace/namespace.someNameSpace.md",
  "module-1/namespaces/someNameSpace/namespaces/namespace.nestedNamespace.md",
  "module-2.md",
]
`;

exports[`Output File Strategy should set default --kindsWithOwnFile 'all' (modules) 1`] = `
[
  "modules.md",
  "README.md",
  "module-1/module-1.md",
  "module-1/namespaces/someNameSpace/namespace.someNameSpace.md",
  "module-1/namespaces/someNameSpace/namespaces/nestedNamespace/namespace.nestedNamespace.md",
  "module-1/namespaces/someNameSpace/namespaces/nestedNamespace/variables/variable.nestedNamespaceVariable.md",
  "module-1/namespaces/someNameSpace/enums/enumeration.NamespaceEnum.md",
  "module-1/namespaces/someNameSpace/classes/class.NameSpaceClassA.md",
  "module-1/namespaces/someNameSpace/interfaces/interface.NamespaceInterface.md",
  "module-1/namespaces/someNameSpace/types/type-alias.NamespaceTypeLiteral.md",
  "module-1/namespaces/someNameSpace/variables/variable.namespaceVariable.md",
  "module-1/enums/enumeration.Module1EnumA.md",
  "module-1/enums/enumeration.Module1EnumB.md",
  "module-1/classes/class.Module1ClassA.md",
  "module-1/classes/class.Module1ClassB.md",
  "module-1/interfaces/interface.Module1InterfaceA.md",
  "module-1/interfaces/interface.Module1InterfaceB.md",
  "module-1/types/type-alias.Module1TypeLiteralA.md",
  "module-1/types/type-alias.Module1TypeLiteralB.md",
  "module-1/variables/variable.module1VariableA.md",
  "module-1/variables/variable.module1VariableB.md",
  "module-1/functions/function.module1FunctionA.md",
  "module-1/functions/function.module1FunctionB.md",
  "module-2/module-2.md",
  "module-2/enums/enumeration.Module2EnumA.md",
  "module-2/enums/enumeration.Module2EnumB.md",
  "module-2/classes/class.Module2ClassA.md",
  "module-2/classes/class.Module2ClassB.md",
  "module-2/interfaces/interface.Module2InterfaceA.md",
  "module-2/interfaces/interface.Module2InterfaceB.md",
  "module-2/types/type-alias.Module2TypeLiteralA.md",
  "module-2/types/type-alias.Module2TypeLiteralB.md",
  "module-2/variables/variable.module2VariableA.md",
  "module-2/variables/variable.module2VariableB.md",
  "module-2/functions/function.module2FunctionA.md",
  "module-2/functions/function.module2sFunctionB.md",
]
`;

exports[`Output File Strategy should set default --kindsWithOwnFile 'all' (namespaces) 1`] = `
[
  "modules.md",
  "README.md",
  "namespaces/someParentNamespace/namespace.someParentNamespace.md",
  "namespaces/someParentNamespace/namespaces/someNameSpace/namespace.someNameSpace.md",
  "namespaces/someParentNamespace/namespaces/someNameSpace/namespaces/nestedNamespace/namespace.nestedNamespace.md",
  "namespaces/someParentNamespace/namespaces/someNameSpace/namespaces/nestedNamespace/variables/variable.nestedNamespaceVariable.md",
  "namespaces/someParentNamespace/namespaces/someNameSpace/enums/enumeration.NamespaceEnum.md",
  "namespaces/someParentNamespace/namespaces/someNameSpace/classes/class.NameSpaceClassA.md",
  "namespaces/someParentNamespace/namespaces/someNameSpace/interfaces/interface.NamespaceInterface.md",
  "namespaces/someParentNamespace/namespaces/someNameSpace/types/type-alias.NamespaceTypeLiteral.md",
  "namespaces/someParentNamespace/namespaces/someNameSpace/variables/variable.namespaceVariable.md",
  "namespaces/someParentNamespace/enums/enumeration.Module1EnumA.md",
  "namespaces/someParentNamespace/enums/enumeration.Module1EnumB.md",
  "namespaces/someParentNamespace/classes/class.Module1ClassA.md",
  "namespaces/someParentNamespace/classes/class.Module1ClassB.md",
  "namespaces/someParentNamespace/interfaces/interface.Module1InterfaceA.md",
  "namespaces/someParentNamespace/interfaces/interface.Module1InterfaceB.md",
  "namespaces/someParentNamespace/types/type-alias.Module1TypeLiteralA.md",
  "namespaces/someParentNamespace/types/type-alias.Module1TypeLiteralB.md",
  "namespaces/someParentNamespace/variables/variable.module1VariableA.md",
  "namespaces/someParentNamespace/variables/variable.module1VariableB.md",
  "namespaces/someParentNamespace/functions/function.module1FunctionA.md",
  "namespaces/someParentNamespace/functions/function.module1FunctionB.md",
  "enums/enumeration.EnumDeclarations.md",
  "enums/enumeration.EnumDeclarationsWithDefaults.md",
  "classes/class.Animal.md",
  "classes/class.Base.md",
  "classes/class.C.md",
  "classes/class.Derived.md",
  "classes/class.Dog.md",
  "classes/class.IndexableClass.md",
  "classes/class.Point.md",
  "types/type-alias.AnyFunctionType.md",
  "variables/variable.__DOUBLE_UNDERSCORES_DECLARATION__.md",
  "variables/variable.enuRef.md",
  "variables/variable.getterAndSetter.md",
  "variables/variable.indexableDeclaration.md",
  "variables/variable.objectLiteralAsConstDeclaration.md",
  "variables/variable.objectLiteralDeclaration.md",
  "variables/variable.stringConstWithDefaultValue.md",
  "variables/variable.stringLetWithDefaultValue.md",
  "variables/variable.typeLiteralDeclaration.md",
  "variables/variable.undefinedNumberDeclaration.md",
  "functions/function.functionDeclaration.md",
]
`;

exports[`Output File Strategy should set default --kindsWithOwnFile 'none' (namespaces) 1`] = `
[
  "modules.md",
  "README.md",
  "namespaces/someParentNamespace/namespace.someParentNamespace.md",
  "namespaces/someParentNamespace/namespaces/someNameSpace/namespace.someNameSpace.md",
  "namespaces/someParentNamespace/namespaces/someNameSpace/namespaces/namespace.nestedNamespace.md",
]
`;

exports[`Output File Strategy should set kindsWithOwnFile [enum, types, variables]' 1`] = `
[
  "modules.md",
  "README.md",
  "module-1/module-1.md",
  "module-1/namespaces/someNameSpace/namespace.someNameSpace.md",
  "module-1/namespaces/someNameSpace/namespaces/nestedNamespace/namespace.nestedNamespace.md",
  "module-1/namespaces/someNameSpace/namespaces/nestedNamespace/variables/variable.nestedNamespaceVariable.md",
  "module-1/namespaces/someNameSpace/enums/enumeration.NamespaceEnum.md",
  "module-1/namespaces/someNameSpace/types/type-alias.NamespaceTypeLiteral.md",
  "module-1/namespaces/someNameSpace/variables/variable.namespaceVariable.md",
  "module-1/enums/enumeration.Module1EnumA.md",
  "module-1/enums/enumeration.Module1EnumB.md",
  "module-1/types/type-alias.Module1TypeLiteralA.md",
  "module-1/types/type-alias.Module1TypeLiteralB.md",
  "module-1/variables/variable.module1VariableA.md",
  "module-1/variables/variable.module1VariableB.md",
  "module-2/module-2.md",
  "module-2/enums/enumeration.Module2EnumA.md",
  "module-2/enums/enumeration.Module2EnumB.md",
  "module-2/types/type-alias.Module2TypeLiteralA.md",
  "module-2/types/type-alias.Module2TypeLiteralB.md",
  "module-2/variables/variable.module2VariableA.md",
  "module-2/variables/variable.module2VariableB.md",
]
`;

exports[`Output File Strategy should set with --groupByKinds=false (modules) 1`] = `
[
  "modules.md",
  "README.md",
  "module-1/module-1.md",
  "module-1/namespaces/someNameSpace/namespace.someNameSpace.md",
  "module-1/namespaces/someNameSpace/namespaces/nestedNamespace/namespace.nestedNamespace.md",
  "module-1/namespaces/someNameSpace/namespaces/nestedNamespace/variable.nestedNamespaceVariable.md",
  "module-1/namespaces/someNameSpace/enumeration.NamespaceEnum.md",
  "module-1/namespaces/someNameSpace/class.NameSpaceClassA.md",
  "module-1/namespaces/someNameSpace/interface.NamespaceInterface.md",
  "module-1/namespaces/someNameSpace/type-alias.NamespaceTypeLiteral.md",
  "module-1/namespaces/someNameSpace/variable.namespaceVariable.md",
  "module-1/enumeration.Module1EnumA.md",
  "module-1/enumeration.Module1EnumB.md",
  "module-1/class.Module1ClassA.md",
  "module-1/class.Module1ClassB.md",
  "module-1/interface.Module1InterfaceA.md",
  "module-1/interface.Module1InterfaceB.md",
  "module-1/type-alias.Module1TypeLiteralA.md",
  "module-1/type-alias.Module1TypeLiteralB.md",
  "module-1/variable.module1VariableA.md",
  "module-1/variable.module1VariableB.md",
  "module-1/function.module1FunctionA.md",
  "module-1/function.module1FunctionB.md",
  "module-2/module-2.md",
  "module-2/enumeration.Module2EnumA.md",
  "module-2/enumeration.Module2EnumB.md",
  "module-2/class.Module2ClassA.md",
  "module-2/class.Module2ClassB.md",
  "module-2/interface.Module2InterfaceA.md",
  "module-2/interface.Module2InterfaceB.md",
  "module-2/type-alias.Module2TypeLiteralA.md",
  "module-2/type-alias.Module2TypeLiteralB.md",
  "module-2/variable.module2VariableA.md",
  "module-2/variable.module2VariableB.md",
  "module-2/function.module2FunctionA.md",
  "module-2/function.module2sFunctionB.md",
]
`;
